--- a/style.css
+++ b/style.css
@@ -343,6 +343,197 @@
         background-color: #ff523b;
         color: #fff;
     }
+    /* --------- Single Product ----------- */
+    
+    .single-product {
+        margin-top: 50px;
+    }
+    
+    .single-product .col-2 {
+        padding: 20px;
+    }
+    
+    .single-product .col-2 img {
+        padding: 0;
+    }
+    
+    .single-product .col-2 h4 {
+        font-weight: bold;
+        font-size: 22px;
+        margin: 20px 0;
+    }
+    
+    .single-product .col-2 select {
+        display: block;
+        margin-top: 20px;
+        padding: 10px;
+    }
+    
+    .single-product .col-2 input {
+        width: 50px;
+        height: 40px;
+        padding-left: 10px;
+        margin-right: 10px;
+        margin-top: 10px;
+        border: 1px solid #ff523b;
+    }
+    
+    input:focus {
+        outline: none;
+    }
+    
+    .small-img-row {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .small-img-col {
+        flex-basis: 24%;
+        cursor: pointer;
+    }
+    /* ------ Cart Page ------ */
+    
+    .cart-page {
+        margin: 80px auto;
+    }
+    
+    table {
+        width: 100%;
+        border-collapse: collapse;
+    }
+    
+    .cart-info {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+    th {
+        color: #fff;
+        text-align: left;
+        background-color: #ff523b;
+        font-weight: normal;
+        padding: 5px;
+    }
+    
+    td {
+        padding: 10px 5px;
+    }
+    
+    td img {
+        width: 80px;
+        height: 80px;
+        margin-right: 10px;
+    }
+    
+    td input {
+        width: 40px;
+        height: 30px;
+        padding: 5px;
+    }
+    
+    td a {
+        color: #ff523b;
+        font-size: 12px;
+    }
+    
+    .table-price {
+        display: flex;
+        justify-content: flex-end;
+    }
+    
+    .table-price table {
+        border-top: 3px solid #ff523b;
+        width: 100%;
+        max-width: 350px;
+    }
+    
+    td:last-child {
+        text-align: right;
+    }
+    
+    th:last-child {
+        text-align: right;
+    }
+    /* ------- Account Page ------- */
+    
+    .account-page {
+        padding: 50px 0;
+        background: radial-gradient(#fff, #ffd6d6);
+    }
+    
+    .form-container {
+        background: #fff;
+        width: 300px;
+        height: 400px;
+        margin: auto;
+        padding: 20px 0;
+        text-align: center;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+        position: relative;
+        overflow: hidden;
+    }
+    
+    .form-container span {
+        font-weight: bold;
+        color: #555;
+        width: 100px;
+        padding: 0 10px;
+        cursor: pointer;
+        display: inline-block;
+    }
+    
+    .form-btn {
+        display: inline-block;
+    }
+    
+    .form-container form {
+        position: absolute;
+        max-width: 300px;
+        padding: 0 20px;
+        top: 130px;
+        transition: transform 1s;
+    }
+    
+    form input {
+        width: 100%;
+        height: 30px;
+        margin: 10px 0;
+        padding: 0 10px;
+        border: 1px solid #555;
+    }
+    
+    form .btn {
+        width: 100%;
+        border: none;
+        margin: 10px 0;
+        cursor: pointer;
+    }
+    
+    form .btn:focus {
+        outline: none;
+    }
+    
+    .form-container a {
+        font-size: 12px;
+    }
+    
+    #indicator {
+        width: 100px;
+        margin-top: 10px;
+        height: 3px;
+        background-color: #ff523b;
+        position: absolute;
+        transform: translateX(100px);
+        transition: transform 1s;
+    }
+    
+    #loginform {
+        left: -300px;
+    }
+    
+    #regform {
+        left: 0;
+    }
     /* ------ MEDIA QUERY FOR MENU ------ */
     
     @media screen and (max-width:800px) {
@@ -367,6 +558,22 @@
         .menu-icon {
             display: block;
             cursor: pointer;
+        }
+        .single-product .row {
+            text-align: left;
+        }
+        .single-product .row-2 {
+            justify-content: center;
+        }
+        .single-product .col-2 h1 {
+            font-size: 26px;
+            line-height: 32px;
+        }
+        .single-product .col-2 {
+            padding: 20px 0;
+        }
+        .cart-info p {
+            display: none;
         }
     }
     /* ------- MEDIA QUERY FOR MOBILE ------- */
